--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Restaurant Page</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><button>Home</button></li>
+                <li><button>Menu</button></li>
+                <li><button>About</button></li>
+            </ul>
+        </nav>
+    </header>
+    <div id="content">
+        <h1>Pinheiro's Pizzeria</h1>
+    </div>
 </body>
 </html>
