--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <div id="logo">Logo</div>
         <nav>
             <ul>
                 <li><button id="home">Home</button></li>
