--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <div id="logo">Logo</div>
+        <div id="logo"><img src="./assets/logo.png" alt="Logo"></div>
         <nav>
             <ul>
                 <li><button id="home">Home</button></li>
